Fix CI: Install matching Playwright browsers
The E2E tests were failing because `npm install` updated `@playwright/test` to a newer version than what was pre-installed in the Docker base image.
This caused a mismatch where the test runner could not find compatible browser binaries.

Changes:
- Added `RUN npx playwright install` to `ui/Dockerfile.test` to download the correct browsers for the installed version.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -19,6 +19,9 @@ COPY ui/package.json ./
 # Install dependencies (forcing build from source to avoid EEXIST/binding issues)
 RUN npm install --build-from-source=better-sqlite3
 
+# Install Playwright browsers matching the installed version
+RUN npx playwright install
+
 # Copy source code
 COPY ui/ .
 # Proto and Server are copied from root context
