fix(e2e): ensure executable binary and enable verbose logging
The E2E tests are still failing in CI. This commit addresses potential causes:
1. Adds `chmod +x /app/server_bin` in `Dockerfile.test` to ensure the pre-built backend binary is executable.
2. Changes `stdout` and `stderr` to `'ignore'` in `ui/playwright.config.ts`. This configuration tells Playwright to inherit standard I/O streams, allowing backend logs to appear in the CI console output for better debugging if startup fails.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -25,7 +25,7 @@ COPY proto/ /proto/
 COPY server/ /server/
 
 # Pre-build backend
-RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
+RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go && chmod +x /app/server_bin
 
 # Run E2E tests
 CMD ["npm", "run", "test:e2e"]
