fix(e2e): verify backend binary in docker build
The E2E tests continue to fail, possibly because the backend binary `server_bin` fails to start. This commit adds verification steps to `ui/Dockerfile.test`:
1. `RUN ldd /app/server_bin`: Checks for missing dynamic libraries.
2. `RUN /app/server_bin -help || true`: Checks if the binary can execute.

If `server_bin` is broken, the Docker build will now fail, providing immediate feedback.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -27,5 +27,9 @@ COPY server/ /server/
 # Pre-build backend
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go && chmod +x /app/server_bin
 
+# Verify backend binary
+RUN ldd /app/server_bin
+RUN /app/server_bin -help || true
+
 # Run E2E tests
 CMD ["npm", "run", "test:e2e"]
