--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -18,6 +18,7 @@ COPY ui/package.json ui/package-lock.json ./
 # Install dependencies
 RUN npm ci
 RUN ln -s /app/node_modules /node_modules
+RUN ./node_modules/.bin/tsx --version
 
 # Copy source code
 COPY ui/ .
