--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -19,6 +19,7 @@ COPY ui/package.json ui/package-lock.json ./
 RUN npm ci
 RUN ln -s /app/node_modules /node_modules
 RUN ./node_modules/.bin/tsx --version
+RUN ./node_modules/.bin/next --version
 
 # Copy source code
 COPY ui/ .
