fix(e2e): pre-build frontend and use next start
The E2E tests are failing in CI, possibly due to `next dev` compilation issues or timeouts. This commit changes the strategy to:
1. Run `npm run build` in `ui/Dockerfile.test` to pre-build the frontend application.
2. Use `next start` (via explicit path) in `ui/playwright.config.ts` to run the production build, which is faster and more reliable than `next dev`.

This should resolve timeouts or build failures during the test phase.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -26,6 +26,9 @@ COPY ui/ .
 COPY proto/ /proto/
 COPY server/ /server/
 
+# Build frontend
+RUN npm run build
+
 # Pre-build backend
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go && chmod +x /app/server_bin
 
