fix(e2e): use port 3000 and cleanup dockerfile
The E2E tests are still failing. This commit tries to resolve potential port conflict issues by switching the frontend port from 9002 to 3000.

It also cleans up the `Dockerfile.test` by removing the `server_bin` build steps, as `go run` is now used at runtime. This avoids confusion and potential build-time issues.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -29,12 +29,8 @@ COPY server/ /server/
 # Build frontend
 RUN npm run build
 
-# Pre-build backend
-RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go && chmod +x /app/server_bin
-
-# Verify backend binary
-RUN ldd /app/server_bin
-RUN /app/server_bin -help || true
+# Download backend dependencies
+RUN cd /server && go mod download
 
 # Run E2E tests
 CMD ["npm", "run", "test:e2e"]
