fix(e2e): robust start script with failure logs and 0.0.0.0 binding
The E2E tests are still failing. This commit makes the `start-e2e.sh` script more robust:

1.  **Failure Logging**: Explicitly `cat /app/backend.log` if `wait-for-backend` fails, ensuring that backend startup errors are visible in the CI logs even if the node script's output is suppressed or truncated.
2.  **Frontend Binding**: Updates `npm start` to bind to `0.0.0.0` instead of `127.0.0.1` to avoid potential networking issues in the Docker container.
3.  **Dependencies**: Adds `sqlite3` to the Dockerfile installation to ensure all necessary database tools are present.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/playwright:v1.57.0-noble
 
 # Install Go
-RUN apt-get update && apt-get install -y wget build-essential && \
+RUN apt-get update && apt-get install -y wget build-essential sqlite3 && \
     wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
     rm go1.24.0.linux-amd64.tar.gz
