--- a/ui/package.json
+++ b/ui/package.json
@@ -69,6 +69,14 @@
     "tsx": "^4.20.6",
     "zod": "^3.25.76"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "esbuild",
+      "sharp",
+      "protobufjs"
+    ]
+  },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.15",
