--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,16 @@ jobs:
         with:
           node-version: "24"
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install Dependencies
         working-directory: ./ui
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run Unit Tests
         working-directory: ./ui
-        run: npm run test:unit
+        run: pnpm run test:unit
 
   e2e:
     timeout-minutes: 20
