--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,7 @@
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.28.0",
   "scripts": {
     "dev": "npm run db:migrate && next dev --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
