--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -20,6 +20,8 @@ COPY ui/package.json ui/pnpm-lock.yaml ./
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
+# Rebuild native modules to ensure they match the container's architecture
+RUN pnpm rebuild better-sqlite3
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
