--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -15,14 +15,19 @@ ENV NODE_OPTIONS="--max-old-space-size=4096"
 # Install pnpm
 RUN npm install -g pnpm
 
-# Copy source code first (excluding node_modules via .dockerignore)
+# Copy source code first
 COPY ui/ .
 COPY proto/ /proto/
 COPY server/ /server/
 
-# Install dependencies and force rebuild native modules
-# We force rebuild better-sqlite3 to ensure bindings match the environment
-RUN pnpm install --frozen-lockfile && pnpm rebuild better-sqlite3
+# Remove lockfile to force fresh resolution and build
+RUN rm pnpm-lock.yaml || true
+
+# Install dependencies
+RUN pnpm install
+
+# Force rebuild better-sqlite3 just in case
+RUN pnpm rebuild better-sqlite3
 
 RUN ln -s /app/node_modules /node_modules
 
