--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
             -e MOCK_API=true \
             -e JULES_API_KEY=mock-api-key \
             jules-test:latest \
-            pnpm run test:e2e
+            npm run test:e2e
 
       - uses: actions/upload-artifact@v4
         if: always()
