--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -12,27 +12,26 @@ WORKDIR /app
 ENV CI=true
 ENV NODE_OPTIONS="--max-old-space-size=4096"
 
-# Install pnpm
-RUN npm install -g pnpm
-
 # Copy source code first
 COPY ui/ .
 COPY proto/ /proto/
 COPY server/ /server/
 
-# Remove lockfile to force fresh resolution and build
-RUN rm pnpm-lock.yaml || true
+# Remove lockfiles to force fresh install
+RUN rm pnpm-lock.yaml package-lock.json || true
 
-# Install dependencies
-RUN pnpm install
+# Install dependencies using npm (flat structure, avoids pnpm symlink issues with bindings)
+RUN npm install
 
-# Force rebuild better-sqlite3 just in case (though we will use sqlite3 CLI for seeding)
-RUN pnpm rebuild better-sqlite3
+# Rebuild native modules just in case
+RUN npm rebuild better-sqlite3
 
-RUN ln -s /app/node_modules /node_modules
+# Symlink? npm doesn't use the same structure, but some scripts might expect it?
+# Usually not needed for npm, but legacy Dockerfile had it. We can likely skip it or keep it harmless.
+# RUN ln -s /app/node_modules /node_modules
 
 # Pre-build backend
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
 
 # Run E2E tests
-CMD ["pnpm", "run", "test:e2e"]
+CMD ["npm", "run", "test:e2e"]
