--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -20,18 +20,14 @@ COPY server/ /server/
 # Remove lockfiles to force fresh install
 RUN rm pnpm-lock.yaml package-lock.json || true
 
-# Install dependencies using npm (flat structure, avoids pnpm symlink issues with bindings)
+# Install dependencies using npm
 RUN npm install
 
-# Rebuild native modules just in case
-RUN npm rebuild better-sqlite3
-
-# Symlink? npm doesn't use the same structure, but some scripts might expect it?
-# Usually not needed for npm, but legacy Dockerfile had it. We can likely skip it or keep it harmless.
-# RUN ln -s /app/node_modules /node_modules
+# Rebuild native modules explicitly from source
+RUN npm rebuild better-sqlite3 --build-from-source
 
 # Pre-build backend
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
 
-# Run E2E tests
-CMD ["npm", "run", "test:e2e"]
+# Run E2E tests with debug check for bindings
+CMD ["sh", "-c", "ls -R node_modules/better-sqlite3/build && npm run test:e2e"]
