Fix CI: Downgrade Playwright image to Jammy
- Switched `ui/Dockerfile.test` base image to `mcr.microsoft.com/playwright:v1.48.1-jammy`.
- This reverts to Ubuntu 22.04 LTS which has better stability for `better-sqlite3` native bindings compared to the newer Ubuntu 24.04 (Noble) image.
- Keeps `npm install` and `--build-from-source` for robustness.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,4 +1,5 @@
-FROM mcr.microsoft.com/playwright:v1.57.0-noble
+# Use Ubuntu Jammy (22.04) based image for better stability with native modules
+FROM mcr.microsoft.com/playwright:v1.48.1-jammy
 
 # Install Go, Python, and sqlite3
 RUN apt-get update && apt-get install -y wget build-essential python3 sqlite3 && \
@@ -29,5 +30,5 @@ RUN npm rebuild better-sqlite3 --build-from-source
 # Pre-build backend
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
 
-# Run E2E tests with debug check for bindings
-CMD ["sh", "-c", "ls -R node_modules/better-sqlite3/build && npm run test:e2e"]
+# Run E2E tests
+CMD ["npm", "run", "test:e2e"]
